--- a/master/website/board/templates/board/b_bizpartner.html
+++ b/master/website/board/templates/board/b_bizpartner.html
@@ -219,7 +219,7 @@
                     return false;
                 }
 
-                if(biznm == '') {
+                if(bizNm == '') {
                     alert('상호명이 비었습니다.');
                     document.getElementById("biznm").focus();
                     return false;
@@ -237,8 +237,8 @@
                     "bizpartner_type": bizpartnerType,
                     "biz_nm": bizNm,
                     "bizpartner_nm": bizpartnerNm,
-                    "cur_cd": curId,
-                    "cn_cd": cnId,
+                    "unitcur": curId,
+                    "unitcn": cnId,
                     "bizpartner_stat": bizpartnerStat
                 };
 
@@ -274,6 +274,7 @@
             function update_element(elem) {
                 var id = elem.getAttribute('name');
 
+                var bizpartnerCd = $('#bizpartner_cd' + id).val();
                 var bizNm = $('#biz_nm' + id).val();
                 var bizpartnerNm = $('#bizpartner_nm' + id).val();
 
