--- a/master/website/board/templates/board/b_itemaccnt.html
+++ b/master/website/board/templates/board/b_itemaccnt.html
@@ -20,78 +20,94 @@
             }
             return cookieValue;
         }
-        var csrftoken = getCookie('csrftoken');
 
+        var csrftoken = getCookie('csrftoken');
         var xhr;
 
         function insertItemaccnt() {
-
-            var itemaccntcd = document.getElementById('itemaccnt_cd').value;
-            if(itemaccntcd == ''){
+            var itemaccntCd = document.getElementById('itemaccnt_cd').value;
+            if (itemaccntCd == '') {
                 alert('Code empty');
                 document.getElementById('itemaccnt_cd').focus();
                 return false;
             }
-            var itemaccntnm = document.getElementById('itemaccnt_nm').value;
-            if(itemaccntnm == ''){
+
+            var itemaccntNm = document.getElementById('itemaccnt_nm').value;
+            if (itemaccntNm == '') {
                 alert('Name empty');
                 document.getElementById('itemaccnt_nm').focus();
                 return false;
             }
 
-            var strurl = "itemaccnt_insert?itemaccntcd=" + itemaccntcd + "&itemaccntnm=" + itemaccntnm;
-            //alert(strurl);
-            //return false;
+            var payload = {
+                "itemaccnt_cd": itemaccntCd,
+                "itemaccnt_nm": itemaccntNm
+            };
 
             xhr = new XMLHttpRequest();
-            xhr.onreadystatechange = function() {
+            xhr.onreadystatechange = function () {
                 if (xhr.readyState == 4) {
-                    var data = xhr.responseText;
+                    if (xhr.status == 201)
+                        alert("생성이 완료되었습니다.");
+                    location.reload();
+                } else {
+                    if (xhr.status == 400) {
+                        var data = xhr.responseText;
+                        var obj = JSON.parse(data);
 
-                    var obj = JSON.parse(data);
-                    alert(obj.result_msg);
-
-                    if(obj.flag =='0') {
-                        location.reload();
+                        if (obj.detail == "DuplicateCode") {
+                            alert("법인코드가 이미 존재합니다.");
+                        } else {
+                            alert("400 Bad Request");
+                        }
                     }
                 }
             };
-            xhr.open("POST", strurl);
+
+            var strurl = "http://127.0.0.1:8080/rest_api/item-accounts";
+            xhr.open("POST", strurl, true);
             xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            xhr.send(null);
+            xhr.setRequestHeader("Content-Type", "application/json");
+            xhr.send(JSON.stringify(payload));
         }
 
          function delete_element(elem) {
+             var id = elem.getAttribute('name');
 
-            var id = elem.getAttribute('id');
+             if (!confirm("삭제 하시겠습니까")) {
+                 return false;
+             }
 
-            if (!confirm("삭제 하시겠습니까")) {
-                return false;
-            }
+             xhr = new XMLHttpRequest();
+             xhr.onreadystatechange = function () {
+                 if (xhr.readyState == 4) {
+                     if (xhr.status == 204)
+                         alert("삭제가 완료되었습니다.");
+                     location.reload();
+                 } else {
+                     if (xhr.status == 400) {
+                         var data = xhr.responseText;
+                         var obj = JSON.parse(data);
 
-            var strurl = "itemaccnt_delete?id=" + id;
-            //alert(strurl);
-            //return false;
+                         if (obj.detail == "") {//추후 에러처리 추가시 사용
+                             alert("에러코드");
+                         } else {
+                             alert("400 Bad Request");
+                         }
+                     }
+                 }
+             };
 
-            xhr = new XMLHttpRequest();
-            xhr.onreadystatechange = function() {
-                if (xhr.readyState == 4) {
-                    var data = xhr.responseText;
-
-                    var obj = JSON.parse(data);
-                    alert(obj.result_msg);
-
-                    location.reload();
-                }
-            };
-            xhr.open("POST", strurl);
-            xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            xhr.send(null);
-        }
+             var strurl = "http://127.0.0.1:8080/rest_api/item-accounts/" + id;
+             xhr.open("DELETE", strurl, true);
+             xhr.setRequestHeader("X-CSRFToken", csrftoken);
+             xhr.setRequestHeader("Content-Type", "application/json");
+             xhr.send(null);
+         }
 
         function updateName(elem) {
+            var accntId = elem.getAttribute('name');
 
-            var accntid = elem.getAttribute('accntid');
             var value = elem.value;
             if(value == ''){
                 alert('Value empty');
@@ -99,7 +115,7 @@
                 return false;
             }
 
-            var strurl = "itemaccnt_update?accntid=" + accntid + "&value=" + value;
+            var strurl = "itemaccnt_update?accntid=" + accntId + "&value=" + value;
             //alert(strurl);
             //return false;
 
@@ -136,66 +152,65 @@
             </div>
             <div>
                 <table>
-                    <tr>
-                        <td width="" align="center">품목계정코드</td>
-                        <td width="" align="center">품목계정명</td>
-                        </td>
-                    </tr>
+                    <thead>
+                        <tr>
+                            <td width="" align="center">품목계정코드</td>
+                            <td width="" align="center">품목계정명</td>
+                            </td>
+                        </tr>
+                    </thead>
                     <tbody>
-                    <tr>
-                        <td>
-                            <input type="text" id="itemaccnt_cd" class="form-control" placeholder="Itemaccnt Code">
-
-                        </td>
-                        <td>
-                            <input type="text" id="itemaccnt_nm" class="form-control" placeholder="Itemaccnt Name">
-
-                        </td>
-                        <td>
-                            <a class="btn btn-primary btn-sm" href="javascript:void(0);" onclick="insertItemaccnt();" title="Bootstrap 3 themes generator">등록</a>
-                        </td>
-                    </tr>
+                        <tr>
+                            <td>
+                                <input type="text" id="itemaccnt_cd" class="form-control" placeholder="Itemaccnt Code">
+                            </td>
+                            <td>
+                                <input type="text" id="itemaccnt_nm" class="form-control" placeholder="Itemaccnt Name">
+                            </td>
+                            <td>
+                                <button onclick="insertItemaccnt();" class="btn btn-primary btn-sm">등록</button>
+                            </td>
+                        </tr>
                     </tbody>
-
                 </table>
             </div>
             <br>
+
             <div class="row">
-              <div class="col-lg-12">
-                <section class="panel">
-                  <div class="table-responsive">
-                      {% if rsItemaccnt %}
-                    <table class="table">
-                      <thead>
-                        <tr>
-                          <th>품목계정코드</th>
-                          <th>품목계정명</th>
-                            <th></th>
-                        </tr>
-                      </thead>
-                        {% for i in rsItemaccnt %}
-                      <tbody  id="itemaccnt_{{i}}">
-                        <tr>
-                          <td width="20%">{{ i.itemaccnt_cd }}</td>
-                          <td width="20%">
-                              <input type="text" class="form-control" accntid="{{ i.id }}" value="{{ i.itemaccnt_nm }}" onchange="updateName(this)"/>
-                          </td>
-                            <td align="right">
-                                <a class="btn btn-default btn-sm" id="{{i.id}}" href="javascript:void(0);" onclick="delete_element(this)" title="Bootstrap 3 themes generator">삭제</a>
-                            </td>
-                        </tr>
-                      </tbody>
-                        {% endfor %}
-                    </table>
-                      {% else %}
-                       <span> Itemaccount가 없습니다. </span>
-                      {% endif %}
-                  </div>
+                <div class="col-lg-12">
+                    <section class="panel">
+                        <div class="table-responsive">
+                            {% if rsItemaccnt %}
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th>품목계정코드</th>
+                                        <th>품목계정명</th>
+                                        <th></th>
+                                    </tr>
+                                </thead>
 
-                </section>
-              </div>
+                                <tbody>
+                                    {% for i in rsItemaccnt %}
+                                    <tr id="itemaccnt_{{i}}">
+                                        <td width="20%">{{ i.itemaccnt_cd }}</td>
+                                        <td width="20%">
+                                            <input type="text" class="form-control" accntid="{{ i.id }}" value="{{ i.itemaccnt_nm }}" onchange="updateName(this)"/>
+                                        </td>
+                                        <td align="right">
+                                            <button class="btn btn-default btn-sm" id="delete_{{i.id}}" name="{{i.id}}" onclick="delete_element(this);">삭제</button>
+                                        </td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                            {% else %}
+                            <span> Itemaccount가 없습니다. </span>
+                            {% endif %}
+                        </div>
+                    </section>
+                </div>
             </div>
-
         </section>
         <!--main content end-->
     </section>
