Update excel read
excel read 화면 추가

--- a/master/website/templates/base.html
+++ b/master/website/templates/base.html
@@ -52,9 +52,10 @@
 </head>
 
 <!-- javascripts -->
+
+  <script src="{%static 'js/jquery-1.8.3.min.js' %}"></script>
   <script src="{%static 'js/jquery.js' %}"></script>
   <script src="{%static 'js/jquery-ui-1.10.4.min.js' %}"></script>
-  <script src="{%static 'js/jquery-1.8.3.min.js' %}"></script>
   <script type="text/javascript" src="{%static 'js/jquery-ui-1.9.2.custom.min.js' %}"></script>
   <!-- bootstrap -->
   <script src="{%static 'js/bootstrap.min.js' %}"></script>
@@ -92,6 +93,8 @@
     <script src="{%static 'js/sparklines.js'%}"></script>
     <script src="{%static 'js/charts.js'%}"></script>
     <script src="{%static 'js/jquery.slimscroll.min.js'%}"></script>
+    <script src="{%static 'js/excel.min.js'%}"></script>
+
     <script>
       //knob
       $(function() {
