--- a/master/website/templates/sidebar.html
+++ b/master/website/templates/sidebar.html
@@ -47,7 +47,7 @@
                     <li><a class="" href="{% url 'board:cc_materialcost_if' %}">재료비 I/F</a></li>
                     <li><a class="" href="{% url 'board:cc_itempermanucost_if' %}">품목별 제조비용 I/F</a></li>
                     <li><a class="" href="{% url 'board:cc_productcostpayment_if' %}">제품원가수불 I/F</a></li>
-                    <li><a class="" >원가 I/F</a></li>
+                    <li><a class="" href="{% url 'board:cc_costbill_if' %}">원가 I/F</a></li>
                     <li><a class=""  >원가 계산</a></li>
                 </ul>
             </li>
