--- a/master/website/board/templates/board/b_item.html
+++ b/master/website/board/templates/board/b_item.html
@@ -64,6 +64,7 @@
                 "item_spec": itemSpec,
                 "unit_id": unitId,
                 "itemgrp": itemgrpId,
+                "itemaccnt": itemaccntId
              };
 
             xhr = new XMLHttpRequest();
